# symbol-graph

./: .gitignore  Cargo.toml  README.md  justfile
apps/splitter/: Cargo.toml
apps/splitter/src/: main.rs
sample/: bar.ts  foo.ts
